# cirrus

./: .gitignore  Cargo.toml  README.md  batch_setup.sh  bench_leader.sh  bench_master.sh  bench_master_ha.sh  bench_master_no_ha.sh  help.html  pack.sh  plot.py  search-index.js  settings.html
arithmetic/: Cargo.toml  fn.build_eq_x_r.html  fn.build_eq_x_r_vec.html  fn.eq_eval.html  struct.DenseMultilinearExtension.html  struct.VirtualPolynomial.html
arithmetic/src/: lib.rs  multilinear_polynomial.rs  util.rs  virtual_polynomial.rs
cirrus/: Cargo.toml
cirrus/src/: master.rs  worker.rs
ec2/: command.sh  execute_command.py  hosts  run_accountability.py  run_exp.py  run_exp_single_thread.py  run_hekaton.py  run_pedersen.py  setup.py  setup.sh  setup_hekaton.py  setup_hekaton.sh  setup_pianist.sh  transfer_setup_param.py  update_code.py  update_code.sh  update_command.py  update_setup.py  update_setup.sh
hyperplonk/: Cargo.toml  index.html  trait.HyperPlonkSNARK.html
hyperplonk/benches/: bench_cirrus.rs
hyperplonk/prelude/: enum.HyperPlonkErrors.html
hyperplonk/src/: custom_gate.rs  errors.rs  lib.rs  mock.rs  selectors.rs  snark.rs  snark_distributed.rs  structs.rs  utils.rs  witness.rs
mobile/: Cargo.toml
scripts/: analyze.py  run.sh
src/arithmetic/: univariate_polynomial.rs.html  virtual_polynomial.rs.html
src/hyperplonk/: lib.rs.html  snark.rs.html  utils.rs.html
src/subroutines/: lib.rs.html
src/subroutines/poly_iop/: prelude.rs.html
src/transcript/: lib.rs.html
subroutines/: Cargo.toml  index.html
subroutines/pcs/: trait.PolynomialCommitmentScheme.html
subroutines/pcs/prelude/: enum.PCSError.html  struct.MultilinearKzgPCS.html  struct.UnivariateKzgPCS.html
subroutines/poly_iop/: struct.PolyIOP.html
subroutines/poly_iop/prelude/: enum.PolyIOPErrors.html  index.html  trait.ProductCheck.html  (+2 more)
subroutines/src/: lib.rs
transcript/: Cargo.toml
(+32 files in other folders)
