[package]
name = "cirrus"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arithmetic = { path = "../arithmetic" }
ark-ec = { version = "^0.4.0", default-features = false }
ark-ff = { version = "^0.4.0", default-features = false }
ark-poly = { version = "^0.4.0", default-features = false }
ark-serialize = { version = "^0.5.0", default-features = false, features = [ "derive" ] }
ark-std = { version = "^0.4.0", default-features = false }
displaydoc = { version = "0.2.3", default-features = false }
rayon = { version = "1.5.2", default-features = false, optional = true }
hyperplonk = { path = "../hyperplonk" }
subroutines = { path = "../subroutines" }
util = { path = "../util" }
ark-bls12-381 = { version = "0.4.0", default-features = false, features = [ "curve" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "master"
path = "src/master.rs"

[[bin]]
name = "worker"
path = "src/worker.rs"

# Benchmarks
[[bench]]
name = "cirrus-benches"
path = "benches/bench.rs"
harness = false

[features]
# default = [ ]
# default = [ "parallel" ]
# default = [ "parallel", "print-trace" ]
default = ["parallel", "extensive_sanity_checks"]
bench = ["parallel"]
# extensive sanity checks that are useful for debugging
extensive_sanity_checks = [
    "hyperplonk/extensive_sanity_checks"
]
parallel = [ 
    "rayon",
    "ark-std/parallel", 
    "ark-ff/parallel",  
    "ark-poly/parallel", 
    "ark-ec/parallel",
    "hyperplonk/parallel",
    "arithmetic/parallel",
    "subroutines/parallel",
    "util/parallel"
]
print-trace = [ 
    "ark-std/print-trace",
    "arithmetic/print-trace",
    "subroutines/print-trace",
    "hyperplonk/print-trace"
] 
